fix #213 - add admin tag if necessary
$helpersAdmin = @(
  'Format-FileSize',
  'Install-ChocolateyPackage',
  'Install-ChocolateyInstallPackage',
  'Install-ChocolateyEnvironmentVariable',
  'Install-ChocolateyExplorerMenuitem',
  'Install-ChocolateyFileAssociation',
  'Start-ChocolateyProcessasAdmin'
)
$path = "C:\dev\choco\chocolatey-packages\automatic\*\tools\*"
$filter = "chocolateyInstall.ps1"
$exclude = "template"
$files = gci -path $path -filter $filter | ?{$_.FullName -notmatch "\\$exclude\\?"}

foreach ($file in $files) {
    Get-Content $file | % {
        # remove comments from line so we don't trigger false positives
        $line = $_ -replace '(^.*?)#.*','$1'
        foreach ($helper in $helpersAdmin) {
            $regex = "\b$helper\b"
            if ($line -match $regex) {
                #Write-Output "Found `"$helper`" in `"$file`"" }}}}

                # get associated nuspec
                #$pkgPath = (get-item $file.PSParentPath).Parent
                $pkgPath = Split-Path -Parent (Split-Path -Parent $file)
                $filter = "*.nuspec"
                $nuspecPath = gci -path $pkgPath -filter $filter -file
                if ($nuspecPath.count -ne 1) {Write-Warning "Found $($nuspecPath.count) nuspec files in $pkgPath"}
                #Write-Output "$($nuspecPath.FullName)" }}}}

                # add "admin" to tags if necessary
                $xml = New-Object System.Xml.XmlDocument
                $xml.PreserveWhitespace = $true
                $xml.Load($nuspecPath.FullName)
                $xmlTags = $xml.Package.MetaData.tags
                $tag = "admin"
                if (-not($xmlTags -match "\b$tag\b")) {$xml.Package.MetaData.tags = "$xmlTags $tag"}
                $xml.Save($nuspecPath.FullName)

                # skip rest of lines and advance to next file
                break
            }
        }
    }
}

--- a/scilab.nuspec
+++ b/scilab.nuspec
@@ -46,7 +46,7 @@ Thanks to its ability to interconnect with [third-party technologies](https://ww
     <docsUrl>http://www.scilab.org/en/resources/documentation</docsUrl>
     <mailingListUrl>http://www.scilab.org/en/development/ml</mailingListUrl>
     <iconUrl>https://cdn.rawgit.com/dtgm/chocolatey-packages/d11226adb2eea0b1211ccdb429a16d52c2e5718c/icons/{{PackageName}}.png</iconUrl>
-    <tags>mathematics numerical computation</tags>
+    <tags>mathematics numerical computation admin</tags>
     <copyright>© Scilab Enterprises S.A.S, Inria</copyright>
     <licenseUrl>https://www.scilab.org/scilab/license</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
