--- a/scilab.nuspec
+++ b/scilab.nuspec
@@ -25,7 +25,7 @@ scientific applications.
 Scilab includes hundreds of mathematical functions. It has a high level programming language allowing access to advanced data
 structures, 2-D and 3-D graphical functions.
 
-#### [Features](https://www.scilab.org/scilab/features/)
+#### Features
 
 * Maths and Simulation for usual engineering and science applications including mathematical operations and data analysis.
 * 2-D and 3-D Visualization graphics functions to visualize, annotate and export data and many ways to create and customize various types of plots and charts.
@@ -38,22 +38,16 @@ structures, 2-D and 3-D graphical functions.
 
 #### Scilab as a platform
 
-Thanks to its ability to interconnect with [third-party technologies](https://www.scilab.org/scilab/interoperability/calculation_engine)
-and [applications](https://www.scilab.org/scilab/interoperability/connection_applications), Scilab can also act as a unique platform to bring
-together codes written in [different programming languages](https://www.scilab.org/scilab/interoperability/connection_languages) in a single,
-unified language, thus facilitating their distribution, their back-up and use.
+Thanks to its ability to interconnect with third-party technologies and applications, Scilab can also act as a
+unique platform to bring together codes written in different programming languages in a single, unified
+language, thus facilitating their distribution, their back-up and use.
 
-* [Screenshots](https://www.scilab.org/scilab/gallery)
-* [Tutorials](http://www.scilab.org/en/resources/documentation/tutorials)
-* [Matlab-Scilab command equivalents](http://help.scilab.org/docs/current/fr_FR/section_36184e52ee88ad558380be4e92d3de21.html)
 * [Wiki](http://wiki.scilab.org/)
 * [Manual](http://help.scilab.org/)
 
 #### Community
 * [File exchange](http://fileexchange.scilab.org/)
 * [Forum](http://scilab.developpez.com/) (Français)
-* [IRC](http://www.scilab.org/resources/user_community/irc)
-* [Social media platforms](http://www.scilab.org/community/connect)
     </description>
     <releaseNotes>
 #### Program
