--- a/scilab.nuspec
+++ b/scilab.nuspec
@@ -3,12 +3,12 @@
   <metadata>
     <id>scilab</id>
     <title>Scilab</title>
-    <version>6.1.1.202301600</version>
+    <version>2023.0.0</version>
     <authors>Scilab Enterprises</authors>
     <owners>BasicTheProgram</owners>
     <packageSourceUrl>https://gitlab.com/chocolatey-packages1/chocolatey-scilab</packageSourceUrl>
     <projectUrl>https://www.scilab.org/</projectUrl>
-    <projectSourceUrl>https://www.scilab.org/download/scilab-6.1.1</projectSourceUrl>
+    <projectSourceUrl>https://www.scilab.org/download/2023.0.0/scilab-2023.0.0.bin.x64.exe</projectSourceUrl>
     <bugTrackerUrl>http://bugzilla.scilab.org/</bugTrackerUrl>
     <docsUrl>https://wiki.scilab.org/Documentation</docsUrl>
     <mailingListUrl>https://www.scilab.org/about/community/mailing-lists</mailingListUrl>
@@ -19,39 +19,39 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>Scientific software for analysis and modeling numerical computation</summary>
     <description>
-Scilab is free and open source software for numerical computation providing a powerful computing environment for engineering and
-scientific applications.
+      Scilab is free and open source software for numerical computation providing a powerful computing environment for engineering and
+      scientific applications.
 
-Scilab includes hundreds of mathematical functions. It has a high level programming language allowing access to advanced data
-structures, 2-D and 3-D graphical functions.
+      Scilab includes hundreds of mathematical functions. It has a high level programming language allowing access to advanced data
+      structures, 2-D and 3-D graphical functions.
 
-#### Features
+      #### Features
 
-* Maths and Simulation for usual engineering and science applications including mathematical operations and data analysis.
-* 2-D and 3-D Visualization graphics functions to visualize, annotate and export data and many ways to create and customize various types of plots and charts.
-* Optimization algorithms to solve constrained and unconstrained continuous and discrete optimization problems.
-* Statistics tools to perform data analysis and modeling.
-* Control System Design and Analyse standard algorithms and tools for control system study.
-* Signal Processing to visualize, analyze and filter signals in time and frequency domains.
-* Application Development to increase Scilab native functionalities and manage data exchanges with external tools.
-* Xcos - Hybrid dynamic systems modeler and simulator for modeling mechanical systems, hydraulic circuits, control systems...
+      * Maths and Simulation for usual engineering and science applications including mathematical operations and data analysis.
+      * 2-D and 3-D Visualization graphics functions to visualize, annotate and export data and many ways to create and customize various types of plots and charts.
+      * Optimization algorithms to solve constrained and unconstrained continuous and discrete optimization problems.
+      * Statistics tools to perform data analysis and modeling.
+      * Control System Design and Analyse standard algorithms and tools for control system study.
+      * Signal Processing to visualize, analyze and filter signals in time and frequency domains.
+      * Application Development to increase Scilab native functionalities and manage data exchanges with external tools.
+      * Xcos - Hybrid dynamic systems modeler and simulator for modeling mechanical systems, hydraulic circuits, control systems...
 
-#### Scilab as a platform
+      #### Scilab as a platform
 
-Thanks to its ability to interconnect with third-party technologies and applications, Scilab can also act as a
-unique platform to bring together codes written in different programming languages in a single, unified
-language, thus facilitating their distribution, their back-up and use.
+      Thanks to its ability to interconnect with third-party technologies and applications, Scilab can also act as a
+      unique platform to bring together codes written in different programming languages in a single, unified
+      language, thus facilitating their distribution, their back-up and use.
 
-* [Wiki](http://wiki.scilab.org/)
-* [Manual](http://help.scilab.org/)
+      * [Wiki](http://wiki.scilab.org/)
+      * [Manual](http://help.scilab.org/)
 
-#### Community
-* [File exchange](http://fileexchange.scilab.org/)
-* [Forum](http://scilab.developpez.com/) (Français)
+      #### Community
+      * [File exchange](http://fileexchange.scilab.org/)
+      * [Forum](http://scilab.developpez.com/) (Français)
     </description>
     <releaseNotes>
 #### Program
-* [Changelog](https://help.scilab.org/docs/6.1.1/en_US/CHANGES.html)
+* [Changelog](https://gitlab.com/scilab/scilab/-/blob/2023.0.0/scilab/CHANGES.md)
 * [Development](https://gitlab.com/scilab/scilab/)
 * [Version history](https://www.scilab.org/scilab-version-history)
 
