Change tags for the test-job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ test_job:
   stage: test
   image: chocolatey/choco:latest-windows
   tags:
-    - windows
+    - saas-windows-medium-amd64
   script:
     - choco install -y -dv -s "'.;$CHOCO_COMMUNITY_FEED'" "$CHOCO_PACKAGE_NAME"
     - choco uninstall -y "$CHOCO_PACKAGE_NAME"
